--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -8,24 +8,27 @@
     margin: auto;
 }
 
-
 .todo-list {
     margin-top: 15px;
+    margin-left: 15px;
     width: 95%;
     height: 400px;
     /* display: block; */
 
 }
-.task-card {
-    /* margin-top: 15px;
-    max-height: 200px; */
+.taskcard {
+    margin-top: 5px;
     padding: 10px;
-    box-shadow:'10px 20px 30px lightgrey';
+    /* box-shadow:'10px 20px 30px black'; */
     display: flex;
     justify-content: space-around;
+    text-align: center;
 }
 
-/* .task-text {
-    
-} */
+.deleteBtn {
+    display: inline-block;
+}
 
+.completed {
+    text-decoration: line-through;
+}
